2004-08-10  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* almost all files:
	changed php code so that it does not produce warnings

2004-08-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* contact/index.php:
	added rules for writing list mail.

2004-07-25  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* donations.php:
	* index.php:
	included donation page in navgen structure

	* screenshots/vectorbuttons/index.php:
	* screenshots/windowdecors/index.php:
	changed settings for pager icon

	* navgen_write/navigation.inc:
	updated due changes in previous php files

	* temporary/helpers/create_pager_icon.sh:
	changed "combine" -> "composite"

	* web-theme/classes/pager_on_top_class.inc:
	fixed "focus" setting when number of subpages is equal to number
	of pages per desk

2004-07-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.php:
	updated wiki link

2004-07-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.php:
	* navgen_write/navigation.inc:
	* httpd/error404.php:

2004-06-27  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/desktops/Piotr_Zielinski-1024x768/*:
	added screenshot

	* web-theme/themes/*_theme.inc:
	* web-theme/classes/*_class.inc:
	added links to different themes.

	* index.php:
	some html fixes.

	* screenshots/windowdecors/brushedmetal/:
	added brushed metal decor

	* logo-competition/logos/voting/index.php:
	disabled page - no idea why this was not done already

2004-05-23  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* screenshots/windowdecors/:
	new window decor page in the style of the other shot pages, this
	page is intended to hold _complete_ window decor decorations for
	fvwm.

	* screenshots/windowdecors/simple/:
	added a first decor - hope others will follow

2004-03-21  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>

	* web-theme/classes/pager_on_top_class.inc:
	changed page algo so that a desktop enlargement is done if is it
	really needed only

2004-03-20  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
