@@ -1,3 +1,8 @@
+2004-08-12  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>>
+
+	* links.php: 
+	Added link from Andrew Dolgov.
+
 2004-08-10  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
 
 	* almost all files:
